--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,469 @@
-asgiref==3.2.10
-certifi==2020.11.8
-cffi==1.14.4
-chardet==3.0.4
+absl-py==0.9.0
+acid-xblock==0.2.1
+aiohttp==3.6.2
+altgraph==0.17
+amqp==2.6.1
+analytics-python==1.2.9
+aniso8601==9.0.1
+appdirs==1.4.4
+APScheduler==3.7.0
+argh==0.26.2
+ascii-magic==1.5.4
+asgiref==3.3.4
+astunparse==1.6.3
+async-timeout==3.0.1
+attrs==21.1.0
+Babel==2.9.1
+beautifulsoup4==4.9.3
+billiard==3.6.4.0
+black==19.10b0
+bleach==3.3.0
+blis==0.4.1
+boto==2.39.0
+boto3==1.4.8
+botocore==1.8.17
+bottle==0.12.18
+bottle-websocket==0.2.9
+bridgekeeper==0.9
+bs4==0.0.1
+cachetools==4.1.0
+catalogue==1.0.0
+celery==4.4.7
+certifi==2020.12.5
+cffi==1.14.5
+cfgv==3.2.0
+chardet==4.0.0
+chatterbot-corpus==1.2.0
+chem==1.2.0
+click==7.1.2
+click-repl==0.1.6
+clipboard==0.0.4
+code-annotations==1.1.1
+colorama==0.4.3
+contextlib2==0.6.0.post1
+coreapi==2.3.3
+coreschema==0.0.4
+crowdsourcehinter-xblock==0.6
 cryptography==3.2.1
-defusedxml==0.7.0rc1
-Django==3.0.8
-django-cors-headers==3.7.0
+cssselect==1.1.0
+cssutils==2.2.0
+cx-Freeze==6.6
+cx-Logging==3.0
+cycler==0.10.0
+cymem==2.0.3
+dataclasses==0.6
+ddt==1.4.2
+decorator==5.0.7
+defusedxml==0.7.1
+diff-match-patch==20181111
+discord.py==1.3.3
+distlib==0.3.1
+dj-database-url==0.5.0
+Django==2.2.20
+django-allauth==0.42.0
+django-appconf==1.0.4
+django-braces==1.14.0
+django-cache-memoize==0.1.9
+django-celery-results==2.0.1
+django-ckeditor==5.4.0
+django-classy-tags==2.0.0
+django-cleanup==2.1.0
+django-config-models==2.1.1
+django-cookies-samesite==0.9.0
+django-cors-headers==2.5.3
+django-countries==5.5
+django-crispy-forms==1.8.1
+django-crontab==0.7.1
+django-crum==0.7.9
+django-environ==0.4.5
+django-fernet-fields==0.6
+django-filter==2.4.0
+django-heroku==0.3.1
+django-import-export==2.2.0
+django-ipware==3.0.2
+django-js-asset==1.2.2
+django-method-override==1.0.4
+django-model-utils==4.1.1
+django-mptt==0.12.0
+django-multi-email-field==0.6.2
+django-mysql==3.11.1
+django-oauth-toolkit==1.3.2
+django-object-actions==3.0.2
+django-pipeline==2.0.6
+django-pyfs==3.0
+django-ratelimit==3.0.1
+django-ratelimit-backend @ git+https://github.com/edx/django-ratelimit-backend.git@610262df4f4e17ec6961d2539702c15b58dd77db
+django-require==1.0.11
+django-rest-auth==0.9.5
+django-rest-framework-social-oauth2==1.1.0
+django-rest-knox==4.1.0
+django-rest-passwordreset==1.1.0
+django-sekizai==2.0.0
+django-ses==2.0.0
+django-simple-history==3.0.0
+django-splash==1.0.0
+django-statici18n==2.0.1
+django-storages==1.8
 django-templated-mail==1.1.1
-djangorestframework==3.11.0
+django-twitter-feed==0.2
+django-user-tasks==1.3.2
+django-waffle==2.1.0
+django-webpack-loader==0.7.0
+djangorestframework==3.12.4
 djangorestframework-simplejwt==4.4.0
-djongo==1.3.4
+djangorestframework-xml==2.0.0
+djongo==1.2.38
 djoser==2.0.3
-dnspython==2.1.0
+dlib==19.21.0
+dload==0.6
+dnspython==1.16.0
+docopt==0.6.2
+docutils==0.16
+docx2pdf==0.1.5
+done-xblock==2.0.4
+drf-jwt==1.19.0
+drf-yasg==1.20.0
+edx-ace==1.1.0
+edx-analytics-data-api-client==0.17.0
+edx-api-doc-tools==1.4.0
+edx-bulk-grades==0.8.9
+edx-ccx-keys==1.2.0
+edx-celeryutils==1.0.0
+edx-completion==4.0.3
+edx-django-release-util==1.0.0
+edx-django-sites-extensions==3.0.0
+edx-django-utils==4.0.0
+edx-drf-extensions==6.5.0
+edx-enterprise==3.22.16
+edx-event-routing-backends==4.0.1
+edx-i18n-tools==0.5.3
+edx-milestones==0.3.1
+edx-opaque-keys==2.2.0
+edx-organizations==6.9.0
+edx-proctoring==3.8.9
+edx-proctoring-proctortrack==1.0.5
+edx-rbac==1.4.2
+edx-rest-api-client==5.3.0
+edx-search==3.0.0
+edx-sga==0.16.0
+edx-submissions==3.2.4
+edx-tincan-py35==1.0.0
+edx-toggles==4.1.0
+edx-user-state-client==1.3.0
+edx-when==2.0.0
+edxval==2.0.3
+Eel==0.12.0
+elasticsearch==7.12.1
+emoji==0.5.4
+enmerkar==0.7.1
+enmerkar-underscore==2.0.0
+et-xmlfile==1.0.1
+eth-hash==0.2.0
+eth-typing==2.2.2
+event-tracking==1.0.4
+face-recognition==1.3.0
+face-recognition-models==0.3.0
+fake-useragent==0.1.11
+filelock==3.0.12
+Flask==1.1.2
+flask-marshmallow==0.13.0
+Flask-RESTful==0.3.8
+fs==2.0.18
+fs-s3fs==0.1.8
+future==0.18.2
+gast==0.3.3
+geoip2==3.0.0
+gevent==1.5a2
+gevent-websocket==0.10.1
+gitdb2==2.0.6
+GitPython==3.0.5
+glob2==0.7
+google-auth==1.14.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+greenlet==0.4.15
+grpcio==1.28.1
+gunicorn==20.1.0
+h5py==2.10.0
+haveibeenpwned==0.0.6
+help-tokens==2.0.0
+html5lib==1.1
+icalendar==4.0.7
+identify==1.5.5
 idna==2.10
-oauthlib==3.1.0
+imgkit==1.0.2
+importlib-metadata==4.0.1
+imutils==0.5.3
+inflection==0.5.1
+install==1.3.3
+ipaddress==1.0.23
+isodate==0.6.0
+isort==5.7.0
+itsdangerous==1.1.0
+itypes==1.2.0
+jdcal==1.4.1
+jedi==0.15.2
+Jinja2==2.11.3
+jmespath==0.10.0
+joblib==0.14.1
+Js2Py==0.70
+jsondiff==1.3.0
+jsonfield2==3.0.3
+Keras==2.4.3
+Keras-Preprocessing==1.1.0
+Kivy==1.11.1
+Kivy-Garden==0.1.4
+kivymd==0.103.0
+kiwisolver==1.1.0
+kombu==4.6.11
+kubernetes==12.0.1
+laboratory==1.0.2
+lazy==1.4
+libsass==0.10.0
+log3==0.1.7
+loremipsum==1.0.5
+lti-consumer-xblock==2.7.4
+lxml==4.5.0
+mailsnake==1.6.4
+Mako==1.1.4
+Markdown==3.3.4
+markey==0.8
+MarkupPy==1.14
+MarkupSafe==1.1.1
+marshmallow==3.8.0
+mathparse==0.1.2
+matplotlib==3.1.2
+maxminddb==1.5.4
+mock==4.0.3
+MongoDBProxy @ git+https://github.com/edx/MongoDBProxy.git@d92bafe9888d2940f647a7b2b2383b29c752f35a
+mongoengine==0.23.1
+MouseInfo==0.1.2
+mpmath==1.2.1
+mss==4.0.3
+mtcnn==0.1.0
+multidict==4.7.5
+murmurhash==1.0.2
+mypy==0.812
+mypy-extensions==0.4.3
+mysqlclient==2.0.3
+networkx==2.4
+newrelic==6.2.0.156
+nltk==3.6.2
+nodeenv==1.6.0
+numpy==1.20.2
+oauthlib==3.0.1
+odfpy==1.4.1
+opencv-contrib-python==4.4.0.42
+opencv-python==4.1.2.30
+openedx-calc==2.0.1
+openpyxl==3.0.4
+opt-einsum==3.2.1
+ora2==3.4.1
+packaging==20.9
+pandas==0.25.3
+parse==1.14.0
+parsimonious==0.8.1
+parso==0.5.2
+path==13.1.0
+path.py==12.5.0
+pathspec==0.8.0
+pathtools==0.1.2
+patsy==0.5.1
+Paver==1.3.4
+pbr==5.6.0
+pefile==2019.4.18
+phonenumbers==8.11.4
+piexif==1.1.3
+Pillow==8.2.0
+ping3==2.6.6
+Pint==0.11
+pipenv==2020.11.15
+plac==1.1.3
+pluggy==0.13.1
+polib==1.1.1
+pre-commit==2.7.1
+preshed==3.0.2
+prettytable==0.7.2
+prompt-toolkit==2.0.10
+protobuf==3.11.3
+psutil==5.8.0
 psycopg2==2.8.5
-psycopg2-binary==2.8.5
+ptpython==2.0.6
+pure-python-adb==0.2.5.dev0
+py==1.9.0
+pyaes==1.6.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAudio==0.2.11
+PyAutoGUI==0.9.48
+PyContracts==1.8.12
+pycountry==20.7.3
 pycparser==2.20
+pycryptodome==3.9.8
+pycryptodomex==3.10.1
+pyee==6.0.0
+pyftpdlib==1.5.6
+PyGetWindow==0.0.8
+Pygments==2.9.0
+PyInstaller==3.6
+pyjokes==0.6.0
+pyjsparser==2.7.1
+pyjwkest==1.4.2
 PyJWT==1.7.1
-pymongo==3.11.3
+pylatexenc==2.10
+pymongo==3.10.1
+PyMsgBox==1.0.7
+pynliner==0.8.0
+pynput==1.6.3
+pyparsing==2.4.7
+PyPDF2==1.26.0
+pyperclip==1.7.0
+pypiwin32==223
+pypng==0.0.20
+pyppeteer==0.0.25
+PyQRCode==1.2.1
+PyQt5==5.13.2
+PyQt5-sip==12.7.0
+pyquery==1.4.1
+PyRect==0.1.4
+PyScreeze==0.1.25
+pyshorteners==1.0.1
+PySocks==1.7.1
+pysrt==1.1.2
+pytesseract==0.3.5
+python-barcode==0.11.0
+python-dateutil==2.8.1
+python-decouple==3.3
+python-Levenshtein==0.12.2
+python-memcached==1.59
+python-slugify==4.0.1
+python-swiftclient==3.11.1
+python-twitter==3.5
 python3-openid==3.2.0
-pytz==2020.1
-requests==2.25.0
+python3-saml==1.9.0
+pytube==9.5.3
+pytube3==9.6.4
+PyTweening==1.0.3
+pytz==2021.1
+pyuca==1.2
+pyvoicechanger==1.5.0
+pywhatkit==2.2
+pywin32==227
+pywin32-ctypes==0.2.0
+pyWinhook==1.6.2
+PyYAML==5.4.1
+pyzbar==0.1.8
+qrcode==6.1
+random2==1.0.1
+recommender-xblock==1.4.9
+redis==3.5.3
+regex==2021.4.4
+reportlab==3.5.34
+requests==2.25.1
+requests-html==0.10.0
 requests-oauthlib==1.3.0
-six==1.15.0
+rest-condition==1.0.3
+rsa==4.0
+ruamel.yaml==0.17.4
+ruamel.yaml.clib==0.2.2
+rules==2.2
+s3transfer==0.1.13
+sailthru-client==2.2.3
+scapy==2.4.3
+schedule==0.6.0
+scikit-learn==0.22.1
+scipy==1.6.3
+selenium==3.141.0
+semantic-version==2.8.5
+Shapely==1.7.1
+simplejson==3.17.2
+six==1.16.0
+sklearn==0.0
+slumber==0.7.1
+smmap2==2.0.5
 social-auth-app-django==4.0.0
-social-auth-core==3.3.3
-sqlparse==0.2.4
-urllib3==1.26.2
-whitenoise==5.2.0
+social-auth-core==3.4.0
+sorl-thumbnail==12.7.0
+sortedcontainers==2.3.0
+soupsieve==2.2.1
+spacy==2.2.3
+SpeechRecognition==3.8.1
+speedtest-cli==2.1.2
+SQLAlchemy==1.2.19
+sqlparse==0.4.1
+srsly==1.0.1
+staff-graded-xblock==1.5.1
+statsmodels==0.12.0
+stevedore==1.32.0
+super-csv==2.0.1
+sympy==1.6.2
+tableauserverclient==0.15.0
+tablib==2.0.0
+tabulate==0.8.6
+Telethon==1.21.1
+tensorboard==2.2.1
+tensorboard-plugin-wit==1.6.0.post3
+tensorflow==2.2.0rc4
+tensorflow-estimator==2.2.0
+termcolor==1.1.0
+terminaltables==3.1.0
+testfixtures==6.17.1
+text-unidecode==1.3
+textblob==0.15.3
+tflearn==0.3.2
+thinc==7.3.1
+tincan==1.0.0
+toml==0.10.1
+toolz==0.10.0
+tox==3.20.0
+tqdm==4.60.0
+translate==3.5.0
+translator==0.0.9
+tutor-openedx==11.2.8
+tweepy==3.8.0
+twitter==1.18.0
+TwitterSearch==1.0.2
+twython==3.8.2
+typed-ast==1.4.1
+typing-extensions==3.7.4.2
+tzlocal==2.1
+ua-parser==0.10.0
+unicodecsv==0.14.1
+unsplash-search==0.2.0
+uritemplate==3.0.1
+urllib3==1.25.11
+user-agent==0.1.9
+user-util==1.0.0
+vidstream==0.0.10
+vine==1.3.0
+virtualenv==20.0.31
+virtualenv-clone==0.5.4
+virtualenvwrapper-win==1.2.5
+voluptuous==0.12.1
+w3lib==1.21.0
+wasabi==0.6.0
+watchdog==2.1.0
+wcwidth==0.1.8
+web-fragments==1.0.0
+webencodings==0.5.1
+WebOb==1.8.7
+websocket-client==0.59.0
+websockets==8.1
+Werkzeug==1.0.1
+whichcraft==0.6.1
+whitenoise==5.0.1
+wikipedia==1.4.0
+win10toast==0.9
+wrapt==1.11.2
+XBlock==1.4.0
+xblock-drag-and-drop-v2 @ git+https://github.com/edx-solutions/xblock-drag-and-drop-v2@c86d5559ab56c9e55f81650b87e4c23f92bd2a5e
+xblock-poll @ git+https://github.com/open-craft/xblock-poll@922cd36fb1c3cfe00b4ce03b19a13185d136447d
+xblock-utils==2.1.2
+xhtml2pdf==0.2.4
+xlrd==1.2.0
+xlwt==1.3.0
+xmlsec==1.3.10
+xss-utils==0.2.0
+yarl==1.4.2
+youtube-dl==2020.1.1
+zipp==3.4.1
